# Dragon

./: README.md
Dragon/: CMakeLists.txt  Dragon.sln  Dragon.vcxproj  compute_mean.cpp  convert_cifar_data.cpp  main.cpp
Dragon/alternative/: mkl_alternative.hpp
Dragon/data_include/: data_reader.hpp  data_transformer.hpp  db.hpp  db_lmdb.hpp
Dragon/data_src/: data_reader.cpp  data_transformer.cpp  db.cpp  db_lmdb.cpp
Dragon/include/: blob.hpp  blocking_queue.hpp  common.hpp  data_reader.hpp  data_transformer.hpp  dragon.pb.h  dragon_thread.hpp  filler.hpp  im2col.hpp  insert_splits.hpp  io.hpp  layer.hpp  layer_factory.hpp  math_function.hpp  net.hpp  rng.hpp  signal_handler.hpp  solver.hpp  synced_mem.hpp  upgrade.hpp
Dragon/include/layers/: common_layers.hpp
Dragon/include/layers/common/: python_layer.hpp
Dragon/include/layers/data/: data_layer.hpp
Dragon/include/layers/loss/: loss_layer.hpp  softmax_loss_layer.hpp
Dragon/include/layers/neuron/: dropout_layer.hpp
Dragon/include/layers/vision/: crop_layer.hpp  roi_pooling_layer.hpp
Dragon/include/solvers/: gradient_solver.hpp
Dragon/include/utils/: filler.hpp  io.hpp  math.hpp
Dragon/layer_include/: common_layers.hpp  data_layers.hpp  layer.hpp  layer_factory.hpp  loss_layers.hpp  neuron_layers.hpp  recurrent_layers.hpp  vision_layers.hpp
Dragon/layer_src/: activation_layers.cpp  activation_layers.cu  app_data_layer.cpp  batch_norm.cu  batch_norm_layer.cpp  conv_layer.cpp  conv_layer.cu  data_layers.cpp  data_layers.cu  dropout_layer.cu  inner_product_layer.cu  layer_factory.cpp  loss_layers.cpp  lstm_layer.cpp  pooling_layer.cpp  pooling_layer.cu  softmax_layer.cu  softmax_loss_layer.cu  split_layer.cpp
Dragon/solver_include/: gradient_solver.hpp  solver.hpp
Dragon/solver_src/: adadelta_solver.cpp  sgd_solver.cpp  solver.cpp
Dragon/src/: CMakeLists.txt  blob.cpp  blocking_queue.cpp  classifier.cpp  common.cpp  common_layers.cpp  data_transformer.cpp  dragon.pb.cc  dragon_thread.cpp  im2col.cpp  im2col.cu  insert_splits.cpp  layer_factory.cpp  main.cpp  math_functions.cpp  math_functions.cu  net.cpp  signal_handler.cpp  solver.cpp  synced_mem.cpp
Dragon/src/layers/common/: accuracy_layer.cpp  batch_norm.cpp  batch_norm.cu  eltwise_layer.cpp  eltwise_layer.cu  inner_product_layer.cpp  inner_product_layer.cu  reshape_layer.cpp  softmax_layer.cpp  softmax_layer.cu
Dragon/src/layers/data/: data_layers.cpp
Dragon/src/layers/loss/: l1_loss_layer.cpp  softmax_loss_layer.cpp  softmax_loss_layer.cu
Dragon/src/layers/neuron/: dropout_layer.cpp  (+4 more)
Dragon/src/protos/: app.pb.cc  app.pb.h  app.proto  dragon.pb.cc  dragon.pb.h  dragon.proto
Dragon/src/python/: _dragon.cpp
Dragon/src/solvers/: adadelta_solver.cpp  rmsprop_solver.cpp  sgd_solver.cpp
Dragon/src/utils/: im2col.cu  insert_splits.cpp  math.cpp
(+16 files in other folders)
